[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psae-core"
version = "0.1.0"
description = "Shared types, config, and message bus for the Presidential Sentiment Alpha Engine"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "pandas>=2.0",
    "pytz",
    "structlog",
    "exchange-calendars>=4.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pytest-cov"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
